Adding memory limits.

--- a/templates/metrics-forwarder.yaml
+++ b/templates/metrics-forwarder.yaml
@@ -151,10 +151,21 @@ spec:
         - name: metrics-forwarder
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
           command: ["/redpanda-connect", "run", "/config/metrics-forwarder.yaml"]
+          resources:
+            limits:
+              cpu: "1"
+              memory: "{{.Values.source.memory.k8s}}Mi"
+            requests:
+              cpu: "1"
+              memory: "{{.Values.source.memory.k8s}}Mi"
           volumeMounts:
             - name: metrics-forwarder
               mountPath: /config
           env:
+            - name: GOGC
+              value: "100"
+            - name: GOMEMLIMIT
+              value: "{{ .Values.source.memory.go}}MiB"
             - name: REDPANDA_NAMESPACE
               value: {{ .Values.source.namespace }}
             - name: REDPANDA_POD_PREFIX
