--- a/templates/logs-forwarder.yaml
+++ b/templates/logs-forwarder.yaml
@@ -141,10 +141,21 @@ spec:
         - name: logs-forwarder
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
           command: ["/redpanda-connect", "run", "/config/logs-forwarder.yaml"]
+          resources:
+            limits:
+              cpu: "1"
+              memory: "{{.Values.source.memory.k8s}}Mi"
+            requests:
+              cpu: "1"
+              memory: "{{.Values.source.memory.k8s}}Mi"
           volumeMounts:
             - name: logs-forwarder
               mountPath: /config
           env:
+            - name: GOGC
+              value: "100"
+            - name: GOMEMLIMIT
+              value: "{{ .Values.source.memory.go}}MiB"
             - name: REDPANDA_NAMESPACE
               value: {{ .Values.source.namespace }}
             - name: REDPANDA_POD_PREFIX
