--- a/values.yaml
+++ b/values.yaml
@@ -3,6 +3,9 @@ image:
   tag: "0.0.36"
 
 source:
+  memory:
+    k8s: 2000
+    go: 1800
   customer_id: # mandatory - same as client id
   namespace: redpanda
   # the redpanda pod prefix is the pod name without the hyphen or ordinal (so for the pod redpanda-0, the prefix is redpanda)
