--- a/templates/metrics-forwarder.yaml
+++ b/templates/metrics-forwarder.yaml
@@ -74,47 +74,42 @@ data:
             max_http_request_bytes: 100000
 
     output:
-      label: "logs_forwarder_kafka_output"
-      http_client:
-        url: {{ .Values.destination.seed_broker }}/topics/${! meta("topic") }
-        verb: POST
-        headers:
-          Content-Type: application/vnd.kafka.binary.v2+json
-        basic_auth:
-          enabled: true
-          username: ${TELEMETRY_USERNAME}
-          password: ${TELEMETRY_PASSWORD}
+      label: "logs_forwarder_http_output"
+      fallback:
+        - http_client:
+            url: {{ .Values.destination.seed_broker }}/topics/${! meta("topic") }
+            verb: POST
+            headers:
+              Content-Type: application/vnd.kafka.binary.v2+json
+            basic_auth:
+              enabled: true
+              username: ${TELEMETRY_USERNAME}
+              password: ${TELEMETRY_PASSWORD}
+        - drop: {}
     {{ end }}
     {{- if eq .Values.destination.transport "kafka" }}
     output:
-      kafka_franz:
-        seed_brokers: [ {{ .Values.destination.seed_broker }} ]
-        topic: metrics
-        client_id: ${TELEMETRY_CLIENT}
-        timeout: 10s
-        max_message_bytes: 1MB
-        compression: lz4
-        key: ${! meta("customer_id")}-${! meta("redpanda_id")}-${! meta("redpanda_node_id")}
-        batching:
-          byte_size: 1000000
-          count: 0
-          period: 10s
-        sasl:
-          - mechanism: ${TELEMETRY_MECHANISM}
-            username: ${TELEMETRY_USERNAME}
-            password: ${TELEMETRY_PASSWORD}
-        tls:
-          enabled: true
-    {{ end }}
-    {{- if eq .Values.destination.transport "experiment" }}
-    output:
-      kafka_rest:
-        baseurl: {{ .Values.destination.seed_broker }}
-        topic: metrics
-        key: ${! meta("customer_id")}-${! meta("redpanda_id")}-${! meta("redpanda_node_id")}
-        username: ${TELEMETRY_USERNAME}
-        password: ${TELEMETRY_PASSWORD}
-        timeout: 60s
+      label: "logs_forwarder_kafka_output"
+      fallback:
+        - kafka_franz:
+            seed_brokers: [ {{ .Values.destination.seed_broker }} ]
+            topic: metrics
+            client_id: ${TELEMETRY_CLIENT}
+            timeout: 10s
+            max_message_bytes: 1MB
+            compression: lz4
+            key: ${! meta("customer_id")}-${! meta("redpanda_id")}-${! meta("redpanda_node_id")}
+            batching:
+              byte_size: 1000000
+              count: 0
+              period: 10s
+            sasl:
+              - mechanism: ${TELEMETRY_MECHANISM}
+                username: ${TELEMETRY_USERNAME}
+                password: ${TELEMETRY_PASSWORD}
+            tls:
+              enabled: true
+        - drop: {}
     {{ end }}
 ---
 apiVersion: v1
