--- a/templates/logs-forwarder.yaml
+++ b/templates/logs-forwarder.yaml
@@ -139,10 +139,10 @@ spec:
           resources:
             limits:
               cpu: "1"
-              memory: "{{.Values.source.memory.k8s}}Mi"
+              memory: "{{.Values.logs.memory.k8s}}Mi"
             requests:
               cpu: "1"
-              memory: "{{.Values.source.memory.k8s}}Mi"
+              memory: "{{.Values.logs.memory.k8s}}Mi"
           volumeMounts:
             - name: logs-forwarder
               mountPath: /config
@@ -150,7 +150,7 @@ spec:
             - name: GOGC
               value: "100"
             - name: GOMEMLIMIT
-              value: "{{ .Values.source.memory.go}}MiB"
+              value: "{{ .Values.logs.memory.go}}MiB"
             - name: REDPANDA_NAMESPACE
               value: {{ .Values.source.namespace }}
             - name: REDPANDA_POD_PREFIX
