--- a/values.yaml
+++ b/values.yaml
@@ -1,6 +1,6 @@
 image:
   repository: pmwrp/rp-live
-  tag: "0.0.36"
+  tag: "0.0.47"
 
 source:
   customer_id: # mandatory - same as client id
@@ -55,12 +55,14 @@ logs:
 
 metrics:
   enabled: true
+  scrape_interval: 60s
   memory:
     k8s: 2000
     go: 1800
 
 internal_metrics:
   enabled: true
+  scrape_interval: 60s
   memory:
     k8s: 4000
     go: 3800
